[package]
name = "tail"
version = "0.1.0"
authors = ["LeCyberDucky <19520383+LeCyberDucky@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
anyhow = "1.0.38"
path-absolutize = "3.0.6"
thiserror = "1.0.23"
hotwatch = "0.4.5"
crossbeam-utils = "0.8.2"
